# weather-notifier

./: .gitignore  Cargo.toml
src/: config.rs  forecast_client.rs  main.rs  measures.rs  notification.rs
